--- a/MyPlaces/Base.lproj/Main.storyboard
+++ b/MyPlaces/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                 </connections>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Mjj-q0-Wyi">
-                                <rect key="frame" x="0.0" y="113" width="414" height="749"/>
+                                <rect key="frame" x="0.0" y="113" width="414" height="783"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="jG9-W0-PVC" customClass="CustomTableViewCell" customModule="MyPlaces" customModuleProvider="target">
@@ -100,7 +100,7 @@
                         <constraints>
                             <constraint firstItem="7Ul-9k-tCa" firstAttribute="leading" secondItem="gjF-wS-kir" secondAttribute="leading" id="0AC-79-i1q"/>
                             <constraint firstItem="7Ul-9k-tCa" firstAttribute="top" secondItem="gjF-wS-kir" secondAttribute="top" id="1eo-9p-leD"/>
-                            <constraint firstItem="gjF-wS-kir" firstAttribute="bottom" secondItem="Mjj-q0-Wyi" secondAttribute="bottom" id="Bjn-81-wV1"/>
+                            <constraint firstAttribute="bottom" secondItem="Mjj-q0-Wyi" secondAttribute="bottom" id="Bjn-81-wV1"/>
                             <constraint firstItem="Mjj-q0-Wyi" firstAttribute="top" secondItem="7Ul-9k-tCa" secondAttribute="bottom" id="Hrt-Ur-0MJ"/>
                             <constraint firstItem="Mjj-q0-Wyi" firstAttribute="leading" secondItem="gjF-wS-kir" secondAttribute="leading" id="LXt-Zq-OCv"/>
                             <constraint firstItem="7Ul-9k-tCa" firstAttribute="leading" secondItem="gjF-wS-kir" secondAttribute="leading" id="Pa1-uX-c9W"/>
@@ -285,7 +285,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="140"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ocb-mu-Pm5" customClass="RatingControl" customModule="MyPlaces" customModuleProvider="target">
+                                                <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="252" placeholderIntrinsicHeight="44" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ocb-mu-Pm5" customClass="RatingControl" customModule="MyPlaces" customModuleProvider="target">
                                                     <rect key="frame" x="81" y="48" width="252" height="44"/>
                                                 </stackView>
                                             </subviews>
@@ -367,6 +367,11 @@
             <point key="canvasLocation" x="2473" y="-299"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="ocb-mu-Pm5">
+            <size key="intrinsicContentSize" width="252" height="44"/>
+        </designable>
+    </designables>
     <inferredMetricsTieBreakers>
         <segue reference="2If-hG-GFK"/>
     </inferredMetricsTieBreakers>
