--- a/MyPlaces/Base.lproj/Main.storyboard
+++ b/MyPlaces/Base.lproj/Main.storyboard
@@ -321,6 +321,7 @@
                         <outlet property="placeLocation" destination="tHM-PB-kJ1" id="558-wj-iaa"/>
                         <outlet property="placeName" destination="dhq-gw-l1A" id="MP1-jQ-Fua"/>
                         <outlet property="placeType" destination="p76-GY-3VQ" id="1NY-69-b2c"/>
+                        <outlet property="ratingControl" destination="ocb-mu-Pm5" id="QxA-05-hpg"/>
                         <outlet property="saveButton" destination="age-Sf-cPx" id="3dm-hi-O1s"/>
                     </connections>
                 </tableViewController>
